Editing navigation z-index to fix flyout issue

--- a/modules/header/navigation/navigation.scss
+++ b/modules/header/navigation/navigation.scss
@@ -13,6 +13,8 @@ $3dsize: 4px;
 
 #{$module} {
   background: $colorBlue1;
+  position:relative;
+  z-index: 10;
 
   .menu {
     padding: 0;
